# DS_8

./: .gitignore  CARRE_MAXIME_4_presentation_022026.pptx  README.md  pyproject.toml  requirements.txt
src/DS_8/CARRE_MAXIME_2_notebooks_veille_022026/: 01_baseline.ipynb  02_rag_pipeline.ipynb  results_llm_predictions_gpt_oss_120b.csv  results_llm_predictions_gpt_oss_20b.csv  results_llm_predictions_llama3-18binstant.csv
src/DS_8/config/: utils.py
src/DS_8/preparation/: build_knowledge_base.py
