[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "DS_8"
description = "This package contains everything needed for project 8."
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.12.6"
dependencies = [
    "numpy>=2.3.4",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "requests>=2.32.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]